Safari365 Prod/src/objects/IntegrationLog__c.object
<CustomObject>
    <fields>
        <fullName>Callout_Time__c</fullName>
        <label>Callout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Class__c</fullName>
        <label>Error Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Response__c</fullName>
        <label>Service Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntegrationLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IntegrationLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IntegrationLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>